--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-export/PowerLoad-B_Cu.gbr
-export/PowerLoad-B_Mask.gbr
-export/PowerLoad-B_Paste.gbr
-export/PowerLoad-B_Silkscreen.gbr
-export/PowerLoad-Edge_Cuts.gbr
-export/PowerLoad-F_Cu.gbr
-export/PowerLoad-F_Mask.gbr
-export/PowerLoad-F_Paste.gbr
-export/PowerLoad-F_Silkscreen.gbr
-export/PowerLoad-job.gbrjob
-export/PowerLoad-NPTH.drl
-export/PowerLoad-PTH.drl
-export/PowerLoadByAkaKasyan.zip
-kasyan/80EBU02.pdf
-kasyan/500W.lay6
-kasyan/circuit.JPG
-kasyan/IRGPS40B120U.pdf
-PowerLoad-backups/PowerLoad-2025-07-03_151832.zip
-PowerLoad-backups/PowerLoad-2025-07-03_152336.zip
+export/*
+PowerLoad-backups/*
+kasyan/*
